# cookiecutter-pypackage

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .travis.yml  Makefile  readme.md  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
