[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_short_description }}
long_description = file: readme.md
long-description-content-type = text/x-md
author = {{ cookiecutter.full_name }}
classifiers =
    Programming Language :: Python :: 3.7
    License :: Other/Proprietary License

[options]
install_requires =
    Click==7.0

packages = find:
include_package_data = True
setup_requires =
    setuptools_scm

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    ipython==7.18.1
    pre-commit==2.7.1
    black==20.8b1
    isort==5.5.2
    mypy==0.782
    bump2version==0.5.11
    wheel==0.33.6
    watchdog==0.9.0
    flake8==3.7.8
    tox==3.14.0
    coverage==4.5.4

docs =
    Sphinx==1.8.5
    twine==1.14.0
    sphinx_autodoc_typehints


test =
    pytest==4.6.5
    pytest-runner==5.1
    pytest-cov==2.10.1

[flake8]
max-line-length = 88

[pep8]
ignore = E501, E701, E402, W503
max-line-length = 88

[mypy]
ignore_missing_imports = True

[isort]
multi_line_output=3
include_trailing_comma=True
line_length=88

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

